src/objects/SIC_Code__mdt.object
<CustomObject>
    <fields>
        <fullName>Industry_Group__c</fullName>
        <description>Level 2 Sic Code</description>
        <label>Industry Group</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Group__c</fullName>
        <description>Level 1 SIC Codes</description>
        <label>Major Group</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specific_Code__c</fullName>
        <description>Level 3 SIC Code</description>
        <label>Specific Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>SIC Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>Major_Group__c</columns>
        <columns>Industry_Group__c</columns>
        <columns>Specific_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>SIC Codes</pluralLabel>
</CustomObject>